--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ click==8.1.7
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
-importlib-resources==6.4.0
-jinja2==3.1.4
+importlib_resources==6.4.0
+Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
@@ -20,11 +20,11 @@ numpy==1.24.4
 packaging==24.1
 pandas==2.0.3
 pillow==10.3.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 protobuf==4.25.3
 pyarrow==16.1.0
 pydeck==0.9.1
-pygments==2.18.0
+Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.35.1
@@ -41,7 +41,7 @@ toml==0.10.2
 toolz==0.12.1
 tornado==6.4.1
 tqdm==4.66.4
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2024.1
 Unidecode==1.3.8
 urllib3==2.2.1
